--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     buildCommand: |
       apt update && apt install -y ffmpeg
+      pip install python-multipart
       pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     plan: free
